editar, mostrar cuentas por pagar y cobrar

--- a/WebContent/accounts.html
+++ b/WebContent/accounts.html
@@ -120,8 +120,7 @@
 	        </div>
         	<div id="content" style="position:absolute;">	
 	        	<h2>Cuentas:</h2><br>
-	        	<br>
-				<div id="tabs">
+	        	<div id="tabs">
 					<ul>
 					    <li><a href="#tabs-1">Por Cobrar</a></li>
 					    <li><a href="#tabs-2">Por Pagar</a></li>
@@ -148,12 +147,12 @@
 											<td>1001</td>
 											<td>Vidamed</td>
 											<td>Bs. 15000</td>
-											<td>20-08-2013</td>
+											<td>20/08/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="editReceivable.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
-												<a href="showAdmission.html" style="color: transparent" >
+												<a href="showReceivable.html" style="color: transparent" >
 													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 												</a>
 												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
@@ -167,9 +166,9 @@
 											<td>1002</td>
 											<td>La Previsora</td>
 											<td>Bs. 5000</td>
-											<td>25-11-2013</td>
+											<td>25/11/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
 												<a href="#" style="color: transparent" >
@@ -186,9 +185,9 @@
 											<td>1003</td>
 											<td>Multinacional de Seguros</td>
 											<td>Bs. 34500</td>
-											<td>17-10-2013</td>
+											<td>17/10/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="#" style="color: transparent" >
 													<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
 												<a href="#" style="color: transparent" >
@@ -227,12 +226,12 @@
 											<td>1001</td>
 											<td>Hospital Online</td>
 											<td>Bs. 15000</td>
-											<td>20-09-2013</td>
+											<td>20/09/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="editAccountPayable.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
-												<a href="showAdmission.html" style="color: transparent" >
+												<a href="showAccountPayable.html" style="color: transparent" >
 													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 												</a>
 												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
@@ -246,9 +245,9 @@
 											<td>1002</td>
 											<td>Multinacional de Seguros</td>
 											<td>Bs. 5000</td>
-											<td>25-11-2013</td>
+											<td>25/11/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
 												<a href="#" style="color: transparent" >
@@ -265,9 +264,9 @@
 											<td>1003</td>
 											<td>Vidamed</td>
 											<td>Bs. 34500</td>
-											<td>17-10-2013</td>
+											<td>17/10/2013</td>
 											<td>
-												<a href="editHospitalization.html" style="color: transparent" >
+												<a href="#" style="color: transparent" >
 													<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 												</a>
 												<a href="#" style="color: transparent" >
