--- a/WebContent/editAccountPayable.html
+++ b/WebContent/editAccountPayable.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Cuenta por Pagar</title>
+		<title>Editar Cuenta por Pagar</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -76,7 +76,7 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Cuenta por Pagar:</h2>
+	        	<h2>Editar Cuenta por Pagar:</h2>
 	        	<br>
 				<div id="tabs">
 					<ul>
@@ -88,9 +88,9 @@
 						<fieldset>
 							<label for="name">Documento a Pagar:</label>
 							<select name="txtGen" id="txtGen">	
-								<option value="-" selected="selected">Seleccionar</option>
+								<option value="-" >Seleccionar</option>
 								<option value="F">Anticipo</option>
-								<option value="F">Factura</option>
+								<option value="F" selected="selected">Factura</option>
 								<option value="F">Giros</option>
 								<option value="F">Honorarios</option>
 								<option value="F">Liquidación</option>
@@ -99,15 +99,15 @@
 								<option value="F">Reintegros</option>
 							</select> <br><br>
 							<label for="name">Factura:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="F-7629"/> <br><br>
 							<label for="name">Número Control:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="1725778"/> <br><br>
 							<label for="name">Proveedor:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /><br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Anthony Bernal"/> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /><br><br>
 							<label for="name">Fecha Facturación:</label>
-							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" /> <br><br>
+							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" value="18/07/2013" /> <br><br>
 							<label for="name">Fecha Vencimiento:</label>
-							<input type="text" name="txtDateIni2" id="txtDateIni2" maxlength="50" size="10" />
+							<input type="text" name="txtDateIni2" id="txtDateIni2" maxlength="50" size="10" value="20/09/2013" />
 						</fieldset>						
 						<div id="botonera">
 							<form action="accounts.html" style="display: inline; ">
@@ -125,17 +125,17 @@
 			  		<div id="tabs-2">
 						<fieldset>
 							<label for="name">Base Imponible:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 13392,85"/> <br><br>
 							<label for="name">IVA:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 1607,15"/> <br><br>
 							<label for="name">Monto Exento IVA:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="-"/> <br><br>
 							<label for="name">Total Factura:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-							<label for="name">Retención IVA:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-							<label for="name">Monto a Pagar:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 15000"/> <br><br>
+							<label for="name">Retención IVA:</label> 
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="-"/> <br><br>
+							<label for="name">Monto a Pagar:</label> 
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 15000"/>
 						</fieldset>						
 						<div id="botonera">
 							<form action="accounts.html" style="display: inline; ">
@@ -154,29 +154,29 @@
 						<fieldset>
 							<label for="name">Empresa:</label>
 							<select name="txtGen" id="txtGen">	
-								<option value="-" selected="selected">Seleccionar</option>
-								<option value="F">Centro Médico Quirúrgico Vidamed</option>
+								<option value="-" >Seleccionar</option>
+								<option value="F" selected="selected">Centro Médico Quirúrgico Vidamed</option>
 								<option value="F">Centro Materno del Este</option>
 								<option value="F">Servicios Médicos Redmed, C.A.</option>
 							</select> <br><br>
 							<label for="name">Unidad de Negocio:</label>
 							<select name="txtGen" id="txtGen">	
-								<option value="-" selected="selected">Seleccionar</option>
+								<option value="-" >Seleccionar</option>
 								<option value="F">Hospitalización Vidamed</option>
 								<option value="F">Laboratorio Clínico</option>
 								<option value="F">Rayos X Vidamed</option>
 								<option value="F">Emergencia Vidamed</option>
 								<option value="F">Ecosonografía Vidamed</option>
 								<option value="F">Consulta Externa Vidamed</option>
-								<option value="F">Compras e Inventario</option>
+								<option value="F" selected="selected">Compras e Inventario</option>
 								<option value="F">Administración</option>
 							</select> <br><br>
 							<label for="name">Clasificación:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Urgente"/> <br><br>
 							<label for="name">Tipo Proveedor:</label>
 							<select name="txtGen" id="txtGen">	
-								<option value="-" selected="selected">Seleccionar</option>
-								<option value="F">Proveedores</option>
+								<option value="-" >Seleccionar</option>
+								<option value="F" selected="selected">Proveedores</option>
 								<option value="F">Honorarios</option>
 								<option value="F">Pacientes</option>
 								<option value="F">Seguros</option>
@@ -184,7 +184,7 @@
 								<option value="F">Cliente Venta</option>
 							</select> <br><br>
 							<label for="name">Beneficiario Pago:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Vidamed C.A"/> <br><br>
 							<label for="name">Notas de la Cuenta:</label>
 							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea>
 						</fieldset>		
