--- a/WebContent/createReceivable.html
+++ b/WebContent/createReceivable.html
@@ -73,15 +73,16 @@
 			  		<div id="tabs-1">
 						<fieldset>
 							<label for="name">Factura:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtFact" id="txtFact" maxlength="50" size="5"/> <br><br>
 							<label for="name">Número Control:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtControl" id="txtControl" maxlength="50" size="5"/> <br><br>
 							<label for="name">Responsable Pago:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /><br><br>
+							<input type="text" name="txtInsurance" id="txtInsurance" maxlength="50" size="5"/>
+							<a href="createInsurance.html"><input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a> <br><br>
 							<label for="name">Monto a Cobrar:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtMount" id="txtMount" maxlength="50" size="5"/> <br><br>
 							<label for="name">IVA:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtIva" id="txtIva" maxlength="50" size="5"/> <br><br>
 							<label for="name">Fecha Vencimiento:</label>
 							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" />
 						</fieldset>						
@@ -101,14 +102,14 @@
 			  		<div id="tabs-2">
 						<fieldset>
 							<label for="name">Empresa:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtCompany" id="txtCompany">	
 								<option value="-" selected="selected">Seleccionar</option>
 								<option value="F">Centro Médico Quirúrgico Vidamed</option>
 								<option value="F">Centro Materno del Este</option>
 								<option value="F">Servicios Médicos Redmed, C.A.</option>
 							</select> <br><br>
 							<label for="name">Unidad de Negocio:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtUniNeg" id="txtUniNeg">	
 								<option value="-" selected="selected">Seleccionar</option>
 								<option value="F">Hospitalización Vidamed</option>
 								<option value="F">Laboratorio Clínico</option>
@@ -120,9 +121,9 @@
 								<option value="F">Administración</option>
 							</select> <br><br>
 							<label for="name">Clasificación:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtClas" id="txtClas" maxlength="50" size="5"/> <br><br>
 							<label for="name">Tipo Responsable:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtTypeInsurance" id="txtTypeInsurance">	
 								<option value="-" selected="selected">Seleccionar</option>
 								<option value="F">Empresa</option>
 								<option value="F">Cliente</option>
@@ -133,7 +134,7 @@
 							<label for="name">Beneficiario Factura:</label>
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
 							<label for="name">Notas de la Cuenta:</label>
-							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea>
+							<textarea name="txtNotes" id="txtNotes" rows="2" cols="50"></textarea>
 						</fieldset>		
 						<div id="botonera">
 							<form action="accounts.html" style="display: inline; ">
