--- a/WebContent/editReceivable.html
+++ b/WebContent/editReceivable.html
@@ -72,15 +72,16 @@
 			  		<div id="tabs-1">
 						<fieldset>
 							<label for="name">Factura:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="F-1001"/> <br><br>
+							<input type="text" name="txtFact" id="txtFact" maxlength="50" size="5" value="F-1001"/> <br><br>
 							<label for="name">Número Control:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="1726289"/> <br><br>
+							<input type="text" name="txtControl" id="txtControl" maxlength="50" size="5" value="1726289"/> <br><br>
 							<label for="name">Responsable Pago:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Multinacional de Seguros, C.A"/> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /><br><br>
+							<input type="text" name="txtInsurance" id="txtInsurance" maxlength="50" size="5" value="Multinacional de Seguros, C.A"/>
+							<a href="createInsurance.html"><input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a><br><br>
 							<label for="name">Monto a Cobrar:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 13392,85 "/> <br><br>
+							<input type="text" name="txtMount" id="txtMount" maxlength="50" size="5" value="Bs. 13392,85 "/> <br><br>
 							<label for="name">IVA:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Bs. 1607,15"/> <br><br>
+							<input type="text" name="txtIva" id="txtIva" maxlength="50" size="5" value="Bs. 1607,15"/> <br><br>
 							<label for="name">Fecha Vencimiento:</label>
 							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" value="20/08/2013" />
 						</fieldset>						
@@ -100,14 +101,14 @@
 			  		<div id="tabs-2">
 						<fieldset>
 							<label for="name">Empresa:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtCompany" id="txtCompany">	
 								<option value="-" >Seleccionar</option>
 								<option value="F" selected="selected" >Centro Médico Quirúrgico Vidamed</option>
 								<option value="F">Centro Materno del Este</option>
 								<option value="F">Servicios Médicos Redmed, C.A.</option>
 							</select> <br><br>
 							<label for="name">Unidad de Negocio:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtUniNeg" id="txtUniNeg">	
 								<option value="-" >Seleccionar</option>
 								<option value="F">Hospitalización Vidamed</option>
 								<option value="F">Laboratorio Clínico</option>
@@ -119,9 +120,9 @@
 								<option value="F">Administración</option>
 							</select> <br><br>
 							<label for="name">Clasificación:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<input type="text" name="txtClas" id="txtClas" maxlength="50" size="5"/> <br><br>
 							<label for="name">Tipo Responsable:</label>
-							<select name="txtGen" id="txtGen">	
+							<select name="txtTypeInsurance" id="txtTypeInsurance">	
 								<option value="-" >Seleccionar</option>
 								<option value="F" selected="selected" >Empresa</option>
 								<option value="F">Cliente</option>
@@ -130,9 +131,9 @@
 								<option value="F">Cliente Venta</option>
 							</select> <br><br>
 							<label for="name">Beneficiario Factura:</label>
-							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Centro Quirúrgico Vidamed C.A"/> <br><br>
+							<input type="text" name="txtBenf" id="txtBenf" maxlength="50" size="5" value="Centro Quirúrgico Vidamed C.A"/> <br><br>
 							<label for="name">Notas de la Cuenta:</label>
-							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea>
+							<textarea name="txtNotes" id="txtNotes" rows="2" cols="50"></textarea>
 						</fieldset>		
 						<div id="botonera">
 							<form action="accounts.html" style="display: inline; ">
