maqueta html bancos

--- a/WebContent/bank.html
+++ b/WebContent/bank.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Caja y Bancos</title>
+	<title>Cajas</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -78,7 +78,8 @@
 					<li><a href="supplyAreas.html">Suministros</a></li>
 					<li><a href="departments.html">Departamentos</a></li>
 					<li><a href="doctors.html">Doctores</a></li>
-					<li><a class="active" href="bank.html">Cajas y Bancos</a></li>
+					<li><a href="bank.html">Cajas</a></li>
+					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li>   
 				</ul>
 			</div>
