--- a/WebContent/searchSupplies.html
+++ b/WebContent/searchSupplies.html
@@ -144,7 +144,8 @@
 					<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
 					<li><a href="departments.html">Departamentos</a></li>
 					<li><a href="doctors.html">Doctores</a></li>
-					<li><a id="bank" href="bank.html">Cajas y Bancos</a></li>
+					<li><a href="bank.html">Cajas</a></li>
+					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a id="accounts" href="accounts.html">Cuentas</a></li>
 				</ul>
 			</div>
