--- a/WebContent/accountMovements.html
+++ b/WebContent/accountMovements.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Servicios</title>
+	<title>Movimientos</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -15,6 +15,7 @@
 			"sScrollY": "250px",
 			"bPaginate": false,
 			"aoColumns": [
+				null,
 				null,
 				null,
 				null,
@@ -58,9 +59,15 @@
         	<img alt="logo" src="./images/logo.png"/>
         </div>         
         <div id="menu">
-			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>					
+	    	<ul>
+            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
+            </ul>	            	
 			<ul>
-            	<li class="menuitem"><a href="createService.html">Crear Servicio</a></li>
+            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
+            </ul>
+			<ul>
+            	<li class="menuitem"><a href="createAccountMovement.html">Crear Movimiento</a></li>
             </ul>
 	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
@@ -73,19 +80,19 @@
 					<li><a href="admission.html">Admisión</a></li>
 				    <li><a href="hospitalization.html">Hospitalización</a></li>
 					<li><a href="protocols.html">Protocolos</a></li>
-					<li><a class="active" href="services.html">Servicios</a></li>
+					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
 					<li><a href="departments.html">Departamentos</a></li>
 					<li><a href="doctors.html">Doctores</a></li>
 					<li><a href="bank.html">Cajas</a></li>
-					<li><a href="bankAccounts.html">Bancos</a></li>
+					<li><a class="active" href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li> 
 				</ul>
 			</div>
             <div id="leftmenu_bottom"></div>
         </div>  
 		<div id="content">  
-			<h2>Servicios:</h2>
+			<h2>Movimientos:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -93,22 +100,24 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Nombre</th>
-										<th>Precio</th>
+										<th>Fecha</th>
+										<th>Tipo</th>
+										<th>Monto</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>Hospitalización</td>
-										<td>6.363,20</td>
+										<td>14/08/2013</td>
+										<td>Orden de Pago</td>
+										<td>-250.00</td>
 										<td>
-											<a href="editService.html" style="color: transparent" >
-												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+											<a href="showAccountMovement.html" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Hospitalización');" >
+												onclick="return loadVars(1001,'1001');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -116,14 +125,15 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>Tratamiento Médico</td>
-										<td>2.265,99</td>
+										<td>13/08/2013</td>
+										<td>Pago a Proveedores</td>
+										<td>-1200.00</td>
 										<td>
 											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'Tratamiento Médico');" >
+												onclick="return loadVars(1002,'1002');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -131,14 +141,15 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1003</td>
-										<td>Operación</td>
-										<td>3.075,00</td>
+										<td>12/08/2013</td>
+										<td>Depósito desde Caja</td>
+										<td>3000.00</td>
 										<td>
 											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'Operación');" >
+												onclick="return loadVars(1003,'1003');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -154,13 +165,13 @@
 		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Servicio</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Movimiento Cuenta</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el servicio '<span class="cliente"></span>' y su información asociada? </span> <br><br>
+				<span>¿Está seguro que desea eliminar el movimiento '<span class="cliente"></span>' y su información asociada? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="services.html" method="post"  onsubmit="return setV(this)">
+				<form action="bankAccounts.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
