--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -90,7 +90,8 @@
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Departamentos</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
-						<li><a href="bank.html">Cajas y Bancos</a></li>
+						<li><a href="bank.html">Cajas</a></li>
+						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
 					</ul>
 				</div>
