--- a/WebContent/showBankAccount.html
+++ b/WebContent/showBankAccount.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Editar Departamento</title>
+		<title>Ver Cuenta Bancaria</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -18,8 +18,10 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="departments.html">Ver Departamentos</a></li>
-            		<li class="menuitem"><a href="createDepartment.html" style="margin-left:10px;">Crear Departamento</a></li>
+	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
+	            </ul>	            	
+				<ul>
+	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -34,28 +36,31 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a class="active" href="departments.html">Departamentos</a></li>
+						<li><a href="departments.html">Departamentos</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
 						<li><a href="bank.html">Cajas</a></li>
-						<li><a href="bankAccounts.html">Bancos</a></li>
+						<li><a class="active" href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
 					</ul>
 				</div>
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Editar Departamento:</h2>
+	        	<h2>Ver Cuenta Bancaria:</h2>
 				<br>
 				<fieldset>
-					<label for="name">Nombre:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Cirugía General"/> <br><br>
-					<label for="name">Descripción:</label>
-					<textarea name="txtDescription" id="txtDescription" rows="3" cols="50">Especialidad médica de clase quirúrgica que abarca las operaciones del aparato digestivo; incluyendo el tracto gastrointestinal y el sistema hepato-bilio-pancreático, el sistema endocrino; incluyendo las glándulas suprarrenales, tiroides, paratiroides y otras glándulas incluidas en el aparato digestivo. Asimismo incluye la reparación de hernias y eventraciones de la pared abdominal.</textarea> <br><br>
+					<label for="name">Tipo de Cuenta:</label> Cuenta de Ahorro <br><br>
+					<label for="name">Número de Cuenta:</label> Caja Chica <br><br>
+					<label for="name">Banco:</label> Clínica Vidamed <br><br>
+					<label for="name">Saldo Disponible:</label> Bs. 1550.00<br><br>
+					<label for="name">Saldo Actual:</label> Bs. 1550.00 <br><br>
+					<label for="name">Saldo Bloqueado:</label> Bs. 0.00 <br><br>
+					<label for="name">Saldo Diferido:</label> Bs. 0.00 <br><br>
 				</fieldset>
 				<div id="botonera">
-					<form action="departments.html">
+					<form action="printBankAccount.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+									<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" />
 						</div>	
 						<div id="botonV" style="display: inline;">
 								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
