maqueta html bancos

--- a/WebContent/accountMovements.html
+++ b/WebContent/accountMovements.html
@@ -142,7 +142,7 @@
 									<tr class="gradeA">
 										<td>1003</td>
 										<td>12/08/2013</td>
-										<td>Depósito desde Caja</td>
+										<td>Depósito</td>
 										<td>3000.00</td>
 										<td>
 											<a href="#" style="color: transparent" >
