--- a/WebContent/createAccountMovement.html
+++ b/WebContent/createAccountMovement.html
@@ -3,11 +3,27 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Cuenta</title>
+		<title>Crear Movimiento</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
+		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>		
+		<!--JS Datapicker-->
+		<script type="text/javascript" src="./js/jquery.ui.datepicker-es.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				$.datepicker.setDefaults($.datepicker.regional['es']);
+				$('#txtDateIni').datepicker({
+					showOn: "button",
+					buttonImage: "images/calendar.png",
+					buttonImageOnly: true,
+					buttonText: "Seleccione una fecha",
+					dateFormat:'dd/mm/yyyy',
+					changeMonth: true,
+				    changeYear: true
+				});
+			} );
+		</script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />		
 	</head>
 	<body>
@@ -19,6 +35,12 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
+	            </ul>	            	
+				<ul>
+	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
+	            </ul>
+				<ul>
+	            	<li class="menuitem"><a href="accountMovements.html">Ver Movimientos</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -43,44 +65,27 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Cuenta:</h2>
+	        	<h2>Crear Movimiento:</h2>
 				<br>
 				<fieldset>
-					<label for="name">Tipo de Cuenta:</label>
+					<label for="name">Fecha:</label>
+					<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="5"/> <br><br>
+					<label for="name">Tipo de Movimiento:</label>
 					<select name="txtCedId" id="txtCedId">	
 						<option value="-" selected="selected">Seleccionar</option>
-						<option value="V-">Cuenta de Ahorro</option>
-						<option value="E-">Recibo de Pago</option>
-						<option value="V-">Cuenta Corriente</option>
-						<option value="E-">Chequera</option>
-						<option value="V-">Cuenta Saldo Fijo</option>
-						<option value="E-">Pagaré</option>
-						<option value="E-">Cuenta Efectivo</option>
+						<option value="V-">Depósito</option>
+						<option value="E-">Orden de Pago</option>
+						<option value="V-">Nota de Crédito</option>
+						<option value="E-">Pago a Proveedores</option>
+						<option value="V-">Pago Honorarios Médicos</option>
 					</select> <br><br>
-					<label for="name">Número de Cuenta:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Banco:</label>
-					<select name="txtCedId" id="txtCedId">	
-						<option value="-" selected="selected">Seleccionar</option>
-						<option value="V-">Clínica Vidamed</option>
-						<option value="E-">ABN-AMRO Bank</option>
-						<option value="V-">Banesco</option>
-						<option value="E-">Banfoandes</option>
-						<option value="V-">Bolívar</option>
-						<option value="E-">Banco Canarias de Venezuela</option>
-						<option value="E-">Banco Caracas</option>
-					</select> <br><br>
-					<label for="name">Saldo Disponible:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Actual:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Bloqueado:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Diferido:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+					<label for="name">Descripción:</label>
+					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>		
+					<label for="name">Monto:</label>
+					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>					
 				</fieldset>
 				<div id="botonera">
-					<form action="bankAccounts.html">
+					<form action="accountMovements.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
 									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 						</div>	
