--- a/WebContent/showAccountMovement.html
+++ b/WebContent/showAccountMovement.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Cuenta</title>
+		<title>Crear Movimiento</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -19,6 +19,12 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
+	            </ul>	            	
+				<ul>
+	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
+	            </ul>
+				<ul>
+	            	<li class="menuitem"><a href="accountMovements.html">Ver Movimientos</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -43,46 +49,18 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Cuenta:</h2>
+	        	<h2>Crear Movimiento:</h2>
 				<br>
 				<fieldset>
-					<label for="name">Tipo de Cuenta:</label>
-					<select name="txtCedId" id="txtCedId">	
-						<option value="-" selected="selected">Seleccionar</option>
-						<option value="V-">Cuenta de Ahorro</option>
-						<option value="E-">Recibo de Pago</option>
-						<option value="V-">Cuenta Corriente</option>
-						<option value="E-">Chequera</option>
-						<option value="V-">Cuenta Saldo Fijo</option>
-						<option value="E-">Pagaré</option>
-						<option value="E-">Cuenta Efectivo</option>
-					</select> <br><br>
-					<label for="name">Número de Cuenta:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Banco:</label>
-					<select name="txtCedId" id="txtCedId">	
-						<option value="-" selected="selected">Seleccionar</option>
-						<option value="V-">Clínica Vidamed</option>
-						<option value="E-">ABN-AMRO Bank</option>
-						<option value="V-">Banesco</option>
-						<option value="E-">Banfoandes</option>
-						<option value="V-">Bolívar</option>
-						<option value="E-">Banco Canarias de Venezuela</option>
-						<option value="E-">Banco Caracas</option>
-					</select> <br><br>
-					<label for="name">Saldo Disponible:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Actual:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Bloqueado:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Saldo Diferido:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+					<label for="name">Fecha:</label> 14/08/2013 <br><br>
+					<label for="name">Tipo de Movimiento:</label> Orden de Pago <br><br>
+					<label for="name">Descripción:</label> Cambio Cerradura Puerta Admisión <br><br>		
+					<label for="name">Monto:</label> -250 Bs <br><br>					
 				</fieldset>
 				<div id="botonera">
-					<form action="bankAccounts.html">
+					<form action="printAccountMovement.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+									<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" />
 						</div>	
 						<div id="botonV" style="display: inline;">
 								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
